# blender-mcp

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: build_skill_archive.py
skills/blender-mcp-cli/: LICENSE  SKILL.md
skills/blender-mcp-cli/agents/: openai.yaml
src/blender_mcp/: __init__.py  cli.py  connection.py  telemetry.py
tests/: __init__.py  fake_blender.py  test_capability_parity.py  test_cli.py  test_connection.py  test_release_contract.py  test_skill_archive.py
