[project]
name = "blender-mcp-cli"
version = "1.6.1"
description = "Direct command-line control for the Blender MCP add-on"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "mcplato-ai"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
legacy-mcp = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
blender-mcp-cli = "blender_mcp.cli:main"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.data-files]
"share/blender-mcp-cli/skills/blender-mcp-cli" = [
    "skills/blender-mcp-cli/SKILL.md",
    "skills/blender-mcp-cli/LICENSE",
]
"share/blender-mcp-cli/skills/blender-mcp-cli/agents" = [
    "skills/blender-mcp-cli/agents/openai.yaml",
]

[project.urls]
"Homepage" = "https://github.com/mcplato-ai/blender-mcp"
"Bug Tracker" = "https://github.com/mcplato-ai/blender-mcp/issues"
